# Chota-3D-Engine

./: .gitignore  CMakeLists.txt  README.md
assets/models/: cube.mtl
assets/scenes/: test.scene
engine/: main.cpp
engine/components/: MeshRendererComponent.h  PlayerControllerComponent.h  RigidBodyComponent.h  Transform.h
engine/core/: Input.cpp  Input.h
engine/ecs/: Entity.h  Registry.h
engine/math/: Camera.cpp  Camera.h
engine/renderer/: MTLLoader.cpp  MTLLoader.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelRenderer.cpp  ModelRenderer.h  OBJLoader.cpp  OBJLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
engine/scene/: SceneLoader.cpp  SceneLoader.h
engine/systems/: PlayerControllerSystem.cpp  PlayerControllerSystem.h  RenderSystem.cpp  RenderSystem.h
shaders/: textured.frag  textured.vert
